[package]
name = "cargo-sponsor"
version = "2025.1.12-1"
edition = "2024"

[dependencies]
cargo_metadata = "0.23"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
url = "2"
indicatif = "0.18"
