[package]
name = "cargo-sponsor"
version = "2025.1.12-1"
edition = "2024"
description = "Find sponsorship links for your Rust project's dependencies"
license = "MIT"
repository = "https://github.com/nikhiljha/cargo-sponsor"
readme = "README.md"

[dependencies]
cargo_metadata = "0.23"
reqwest = { version = "0.13", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
owo-colors = "4"
url = "2"
indicatif = "0.18"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
